<resources>
    <string name="app_name">Game Guide</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="reset_tv_ResetPassword_in">Reset Password</string>
    <string name="singIn_tv_SignIn">Sign in</string>
    <string name="signIn_tv_log_in_now"><u>register now!</u></string>
    <string name="signIn_et_password">password</string>
    <string name="signIn_cb_remember_me">remember me</string>
    <string name="signIn_tv_forget_password">forget password?</string>
    <string name="signIn_btn_sign_in">sign in</string>
    <string name="signIn_tv_you_don_t_have_account">you don\'t have account?</string>
    <string name="reset_btn_reset">Reset</string>
    <string name="reset_tv_back_to_sign_in_page"><u>back to sign in page</u></string>
    <string name="register_tv_registration">Registration</string>
    <string name="register_et_user_name">user name</string>
    <string name="register_et_email">email</string>
    <string name="register_et_phone">phone</string>
    <string name="register_et_password">password</string>
    <string name="register_et_repassword">repassword</string>
    <string name="register_btn_registration">Registration</string>
    <string name="register_tv_back_to_sign_in_page"><u>back to sign in page</u></string>
    <string name="signIn_tv_reset_password"><u>reset password</u></string>
    <string name="menu_item_favourite">favourite</string>
    <string name="menu_item_home">home</string>
    <string name="menu_item_profile">profile</string>
    <string name="pro_tv_profile">profile</string>
    <string name="prof_tv_username">user name</string>
    <string name="prof_tv_phone">phone number</string>
    <string name="prof_tv_email">email</string>
    <string name="prof_btn_logOut">log out</string>
    <string name="prof_tv_language">language</string>
    <string name="prof_tv_appearance">appearance</string>
    <string name="changeProf_et_username">username</string>
    <string name="changeProf_et_phone">phone</string>
    <string name="changeProf_btn_edit">confirm</string>
    <string name="gd_title">title</string>
    <string name="gd_count">count</string>
    <string name="gd_date">date</string>
    <string name="gd_time">time</string>
    <string name="gd_meta_rate">rating</string>
    <string name="gd_rating_count">total rating</string>
    <string name="gd_metacritic_rating">metacritic rating</string>
    <string name="gd_release_date">release date</string>
    <string name="gd_play_time">average play time:  </string>
    <string name="gd_game_image">game image</string>
    <string name="gd_game_favourite">game favourite</string>
    <string name="gd_game_share">game share</string>
    <string name="gd_date_image">date image</string>
    <string name="gd_star_image">star image</string>
    <string name="gd_count_image">count image</string>
    <string name="gd_metacritic_image">metacritic image</string>
    <string name="gd_time_image">time image</string>
    <string name="prof_enable_dark_mode">enable dark mode</string>
    <string name="gd_rating">rating</string>
    <string name="gd_Rating">rating</string>
    <string name="nav_reset">reset password</string>
    <string name="nav_homepage">homepage</string>
    <string name="nav_reg">registration</string>
    <string name="nav_favourite">favourite</string>
    <string name="nav_profile">profile</string>
    <string name="nav_game_details">Game Details</string>
    <string name="nav_game_guide">sign in</string>
    <string name="reset_et_email">email</string>
    <string name="prof_change_language">change language</string>
    <string name="proff_enable_dark_mode">Disabled</string>
    <string name="proff_disable_dark_mode">Enabled</string>
    <string name="prof_Dark_mode">Dark mode</string>
    <string name="GD_tv_website">website</string>
    <string name="GD_tv_about">about</string>
    <string name="GD_tv_platforms">platforms</string>
    <string name="GD_tv_geners">genera</string>
    <string name="GD_tv_date">date</string>
    <string name="GD_tv_developers">developers</string>
    <string name="GD_tv_publishers">publishers</string>
    <string name="GD_tv_age_rating">age rating</string>
    <string name="GD_tv_tags">tags</string>
    <string name="GD_exceptional">exceptional</string>
    <string name="GD_recommended">recommended</string>
    <string name="GD_meh">meh</string>
    <string name="GD_skip">skip</string>
    <string name="rvItem_tv_geners">Genera</string>
    <string name="rvItem_released_date">Released date</string>
    <string name="pro_tv_log_out">log Out</string>
    <string name="pro_tv_setting">setting</string>
    <string name="GD_Hour">1 hour</string>
    <string name="menu_explore">explore</string>
    <string name="GD_Hours2">hours</string>
    <string name="GD_Hours310">hours</string>
    <string name="GD_Hours">hours</string>
    <string name="pro_chooseLang">Choose language:</string>
    <string name="pro_warningLog">are you sure you want to log out?!</string>
    <string name="ab_sign">"sign in"</string>
    <string name="ab_home">Home</string>
    <string name="ab_registration">registration</string>
    <string name="ab_profile">profile</string>
    <string name="ab_favourite">favourite</string>
    <string name="ab_game_details">game details</string>
    <string name="ab_explore">explore</string>
    <string name="prof_dialog_confirm">OK</string>
    <string name="prof_dialog_cancel">Cancel</string>
    <string name="gd_not_rated">not rated</string>
    <string name="GD_not_reated">not rated yet</string>
    <string name="ab_reset_password">reset password</string>
    <string name="GD_not_available">not available</string>

</resources>