<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".enternce.Registration">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">




        <FrameLayout
            android:id="@+id/registrationFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="#095EA1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivRegistrationLogo"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_logo_" />
        </FrameLayout>

        <TextView
            android:id="@+id/tvRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/register_tv_registration"
            android:textAlignment="center"
            android:textSize="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrationFrameLayout" />


        <EditText
            android:id="@+id/etRegistrationUserName"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_shape"
            android:drawableStart="@drawable/ic_baseline_person"
            android:ems="10"
            android:gravity="center|center_horizontal"
            android:hint="@string/register_et_user_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRegistration" />


        <EditText
            android:id="@+id/etRegistrationEmail"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_shape"
            android:drawableStart="@drawable/ic_baseline_email"
            android:ems="10"
            android:gravity="center|center_horizontal"
            android:hint="@string/register_et_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRegistrationUserName" />

        <EditText
            android:id="@+id/etRegistrationPhone"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_shape"
            android:drawableStart="@drawable/ic_baseline_phone"
            android:ems="10"
            android:gravity="center|center_horizontal"
            android:hint="@string/register_et_phone"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRegistrationEmail" />

        <EditText
            android:id="@+id/etRegistrationPassword"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_shape"
            android:drawableStart="@drawable/ic_baseline_lock"
            android:ems="10"
            android:gravity="center|center_horizontal"
            android:hint="@string/register_et_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRegistrationPhone" />

        <EditText
            android:id="@+id/etRegistrationRePassword"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_shape"
            android:drawableStart="@drawable/ic_baseline_lock"
            android:ems="10"
            android:gravity="center|center_horizontal"
            android:hint="@string/register_et_repassword"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRegistrationPassword" />

        <Button
            android:id="@+id/btnRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:background="@drawable/button_background"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/register_btn_registration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRegistrationRePassword" />


        <TextView
            android:id="@+id/tvRegistrationBackSign"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/register_tv_back_to_sign_in_page"
            android:textColor="#2196F3"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRegistration" />

        <ImageView
            android:id="@+id/ivRegisterVisiPass"
            android:layout_width="27dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_baseline_visibility_off"
            app:layout_constraintBottom_toBottomOf="@+id/etRegistrationPassword"
            app:layout_constraintStart_toEndOf="@+id/etRegistrationPassword"
            app:layout_constraintTop_toTopOf="@+id/etRegistrationPassword"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRegisterVisiRePass"
            android:layout_width="27dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_baseline_visibility_off"
            app:layout_constraintBottom_toBottomOf="@+id/etRegistrationRePassword"
            app:layout_constraintStart_toEndOf="@+id/etRegistrationRePassword"
            app:layout_constraintTop_toTopOf="@+id/etRegistrationRePassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>