<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ForgetPassword">

        <FrameLayout
            android:id="@+id/resetFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="30dp"
            android:background="#095EA1"
            app:layout_constraintBottom_toTopOf="@+id/tvResetPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivResetLogo"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icon" />
        </FrameLayout>


        <TextView
            android:id="@+id/tvResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/reset_tv_ResetPassword_in"
            android:textAlignment="center"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resetFrameLayout" />


        <EditText
            android:id="@+id/etResetPasswordEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:drawableStart="@drawable/ic_baseline_email"
            android:ems="10"
            android:hint="@string/reset_et_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvResetPassword"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/btnResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/reset_btn_reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etResetPasswordEmail" />

        <TextView
            android:id="@+id/tvResetBackToSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/reset_tv_back_to_sign_in_page"
            android:textColor="#2196F3"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnResetPassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>